<resources>
    <string name="app_name">MaterialDesign</string>

    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="favourite">Favourite</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="settings_radio_cosmos">Cosmos</string>
    <string name="settings_radio_moon">Moon</string>
    <string name="settings_radio_mars">Mars</string>
    <string name="settings_radio_name">Choose your theme: </string>
    <string name="settings_theme_title">Current theme</string>
    <string name="settings_radio_earth">Earth</string>
    <string name="settings_radio_system">System</string>

    <string name="pause_left">M26,23 V41</string>
    <string name="pause_right">M37,23 L37,32 L37,41</string>
    <string name="pause_right_play">M26,23 L41,32 L27,41</string>
    <string name="clockwise_circle">M32,8 A24,24 0 1 1 31.99,8 z</string>

    <string name="example_desc">"How did a round star create this square nebula? No one is quite sure. The round star, known as MWC 922 and possibly part of a multiple star system, appears at the center of the Red Square Nebula.  The featured image combines infrared exposures from the Hale Telescope on Mt. Palomar in California, and the Keck-2 Telescope on Mauna Kea in Hawaii.  A leading progenitor hypothesis for the square nebula is that the central star or stars somehow expelled cones of gas during a late developmental stage. For MWC 922, these cones happen to incorporate nearly right angles and be visible from the sides.  Supporting evidence for the cone hypothesis includes radial spokes in the image that might run along the cone walls. Researchers speculate that the cones viewed from another angle would appear similar to the gigantic rings of supernova 1987A, possibly indicating that a star in MWC 922 might one day itself explode in a similar supernova.</string>
    <string name="earth_spinning">is spinning</string>
    <string name="favorites_planets">Favorites planets</string>
    <string name="favorites_stars">Favorites stars</string>
    <string name="bonus">Bonus Animation</string>
    <string name="bonus_best_film">Click here for look the best film about cosmos</string>
    <string name="bonus_film_date">"2 april, 1968 "</string>
    <string name="bonus_film_name">2001: A Space Odyssey</string>
    <string name="bonus_film_desc">After discovering a mysterious artifact buried beneath the Lunar surface, mankind sets off on a quest to find its origins with help from intelligent supercomputer H.A.L. 9000.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="planets">Planets list</string>
    <string name="googleText">Text with Google font</string>
</resources>